# ImageProcessingLibrary

./: .gitignore  CMakeLists.txt  Doxyfile  api.c  api.h  drawgradient.c  drawgradient.h  drawstar.c  drawstar.h  main.c  program  rgbtograyscale.h  rotate.c  rotate.h  rotate90.h  rotatebilinear.c  rotatebilinear.h  rotateincomplete.h  sobelhorizontal.c  sobelhorizontal.h  sobelvertical.c
API/: CMakeLists.txt
API/inc/: api.h
API/inc/src/: drawgradient.c  drawgradient.h  drawstar.c  sobel.c  sobelhorizontal.h
API/src/: api.c  drawstar.c  medianfilter.c  medianfilter.h  rgbtograyscale.c  rotate90.c  rotateincomplete.c  sobel.h  sobelvertical.h
html/: drawstar_8c.html  drawstar_8h.html  drawstar_8h_source.html  files.html  globals.html  globals_defs.html  globals_func.html  gradient_8c.html  gradient_8h.html  gradient_8h_source.html  main_8c.html
html/search/: all_1.js  all_3.js  files_0.js  functions_0.js  searchdata.js
latex/: drawstar_8c.tex  drawstar_8h.tex  drawstar_8h_source.tex  files.tex  gradient_8c.tex  gradient_8h.tex  gradient_8h_source.tex  main_8c.tex  refman.tex
main.dSYM/Contents/Resources/DWARF/: main
